src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Institutional</fullName>
        <description>Used for Institutional lead process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Marketing Contacted</fullName>
        </values>
        <values>
            <fullName>New - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retail</fullName>
        <description>Used for retail Lead process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Marketing Contacted</fullName>
        </values>
        <values>
            <fullName>New - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty_Type__c</fullName>
        <label>Specialty Type</label>
        <picklist>
            <picklistValues>
                <fullName>529 Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment &amp; Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsource CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Wealth/ High Net Worth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separately Managed Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taft Hartley</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__CRMI_Modified_Date__c</fullName>
        <label>CRMI Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Id__c</fullName>
        <label>Last Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Rank__c</fullName>
        <label>Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Behavior_Score__c</fullName>
        <label>Silverpop Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Rank__c</fullName>
        <label>Silverpop Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Score__c</fullName>
        <label>Silverpop Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_RecipientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop RecipientID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use &quot;Sync to Silverpop&quot; to determine which leads you want to sync with Silverpop. When the box is checked, the field value CANNOT be changed, the selected leads will be synced to Silverpop and will always sync.</inlineHelpText>
        <label>Sync to Silverpop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop__c</fullName>
        <label>No Longer Used</label>
        <picklist>
            <picklistValues>
                <fullName>Not Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Institutional</fullName>
        <active>true</active>
        <businessProcess>Institutional</businessProcess>
        <description>New Institutional Lead</description>
        <label>Institutional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <businessProcess>Retail</businessProcess>
        <description>New Retail Lead</description>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>silverpop__Disable_Changing_Enable_Sync</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(silverpop__Sync_to_Silverpop_Chk__c ), silverpop__Sync_to_Silverpop_Chk__c=false)</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once the box is checked, it cannot be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_To_None</fullName>
        <active>false</active>
        <description>Sync to Silverpop selection cannot be changed. Once set to &quot;Yes, Always Sync&quot; or &quot;No, Don&apos;t Sync&quot; it cannot be changed back to &quot;-None-.”</description>
        <errorConditionFormula>AND( ISCHANGED(silverpop__Sync_to_Silverpop__c ) &amp;&amp; ISPICKVAL( PRIORVALUE(silverpop__Sync_to_Silverpop__c ) , &quot;No, Don&apos;t Sync&quot;) ,ISPICKVAL( silverpop__Sync_to_Silverpop__c  , &quot;&quot;))</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once set to &quot;Yes, Always Sync&quot; or &quot;No, Don&apos;t Sync&quot; it cannot be changed back to &quot;-None-.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Prevent_Change_From_Engage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
PRIORVALUE( silverpop__Sync_to_Silverpop_Chk__c) = false , 
ISCHANGED( silverpop__CRMI_Modified_Date__c ))</errorConditionFormula>
        <errorDisplayField>silverpop__CRMI_Modified_Date__c</errorDisplayField>
        <errorMessage>Engage contact could not sync to Salesforce because the matching lead or contact in Salesforce has been set to not sync. You will need to change the &quot;Sync to Silverpop&quot; setting for the lead or contact in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>